<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="sg.com.yuno.yunoapp.ui.signin.SignInActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="115dp"
                    android:layout_gravity="center"
                    android:layout_height="115dp"
                    android:src="@drawable/ic_robot"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/pic_circle"/>
            </FrameLayout>

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:background="@drawable/ic_email_bar"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:fontFamily="Roboto"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="12dp"
                    android:paddingLeft="18dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:background="@drawable/ic_password_bar"
                    android:layout_weight="0.95" />

                <Button
                    android:id="@+id/password_forgot_button"
                    android:background="#00ff"
                    android:layout_gravity="end"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="12dp"
                    android:layout_width="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/primary"
                    android:textSize="12sp"
                    android:layout_height="wrap_content" />
            </FrameLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/primary"
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />

            <Button
                android:id="@+id/email_sign_up_button"
                android:background="#00ff"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:text="@string/action_sign_up"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
