<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="sg.com.yuno.yunoapp.ui.signup.SignUpActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/add_display_pic_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_add"/>
                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/pic_circle"/>
            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Put a display picture!"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"/>

            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="18dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:background="@drawable/ic_password_bar"
                android:layout_weight="0.95" />

            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="28dp"
                android:hint="Password"
                android:fontFamily="Roboto"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/ic_email_bar"/>

            <EditText
                android:id="@+id/confirm_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="12dp"
                android:paddingLeft="18dp"
                android:fontFamily="Roboto"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:background="@drawable/ic_password_bar"
                android:layout_weight="0.95" />

            <Button
                android:id="@+id/email_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/primary"
                android:text="@string/action_sign_up_short"
                android:textStyle="bold" />

            <TextView
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:text="@string/join_terms"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:layout_height="wrap_content" />

            <Button
                android:layout_gravity="center"
                android:background="#00ff"
                android:layout_width="wrap_content"
                android:text="@string/terms_and_conditions"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_height="21dp" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
